--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "^5.11.2",
     "@react-navigation/native": "^5.8.9",
+    "axios": "^0.21.0",
     "expo": "~39.0.2",
+    "expo-google-app-auth": "^8.1.3",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
